# bd_parser

./: .gitignore  .rust-analyzer.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  books.csv  labirint.csv  proof.html  proof.txt
.cargo/: config.toml
.github/agents/: AGENTS.md
page_examples/: eksmo.html  igraslov.html  labirint.html
src/: csv_save.rs  eksmo.rs  igraslov.rs  labirint.rs  lib.rs  main.rs  parse_traits.rs  telemetry.rs
